--- a/admin/public/css/personal.css
+++ b/admin/public/css/personal.css
@@ -288,19 +288,19 @@ ul{padding:0;list-style:none;}
   background:#1ee2bb;
 }
 
-.parentd ul{
+.parentd > ul{
   display:none;
 }
 
-.parentd a .arrow{
+.parentd > a > .arrow{
   transform:rotate(-90deg);
 }
 
-.opened a .arrow{
+.opened > a > .arrow{
   transform: rotate(90deg);
 }
 
-.opened ul{
+.opened > ul{
   display:block;
 }
 
